# phd_experiments

./: .gitignore  README.txt  joint_experiments.txt  pargenes_experiments.txt  running.txt
Phy003AED5_CUCME/: mrbayes.newick
Phy003AEDB_CUCME/: mrbayes.newick
current_experiments/: alerax_dtl.py  asteroid_verymissing.py  asteroid_withoutils.py  bench_generax.py  bootstrap_empirical.py  dicotree.py  empirical_runs.py  eval_dl_rates_sim.py  eval_dtl_rates_sim.py  export_empirical_trees.py  extreme_runs.py  fastmrbayes.py  filtered_experiments.py  free.py  gene_distributions.py  grove.py  missing_empirical.py  plop.py  plot_empirical_rf.py  plot_ensembl_gapratio_rf.py  plot_simulations.py  plot_speciesrax.py  print_rf_matrices.py  root_dl.py  root_dtl.py  save_gene_distributions.py  simulations_common.py  species_inference_runs.py  subsampled_experiments.py  temp.py  test_runs.py  varying_dl.py  varying_dtl.py  varying_highilsmissing.py  varying_ilsdl.py  varying_ilsmissing.py  varying_missdl.py  varying_missing.py  yop.py
current_experiments/alerax/: alerax_dl.py  alerax_dtl.py  alerax_dtl_2.py  genetree_inference_dtl.py  plot_ale_alerax_famrates.py
current_experiments/highways/: run_hogenom.sh
datasets/mpirun/: submit_multiple_nodes.sh  submit_one_node.sh  submit_single_job.sh
datasets/recphyloxml/: other_transfer.xml  simple_transfer.xml
highway_files/hogenom_euks/: hogenom_cyano.txt  hogenom_eukstem.txt  hogenom_highways.txt  hogenom_rhodo.txt  (+1 more)
installer/: ale_diff.txt  common.py  deco_diff.txt  deco_make_diff.txt  exabayes_diff.txt  generax_experiments.py  install_fastmulrfs.sh  install_recent_bpp.sh  install_simphy.sh  installer.py  main.py  phyldog_diff.txt
local_experiments/: plot_speciesrax.py  species_inference_runs.py
old_experiments/: varying_dtl.py  varying_extreme.py  varying_fammodel.py  varying_fewfamilies.py  varying_highilsmissing.py  varying_ilsmissing.py  varying_uniformilsmissing.py
programs/mpi/fake_mpi_program/: CMakeLists.txt  README.txt  fake_mpi_program.cpp
programs/mpi/generate_hosts_list/: CMakeLists.txt  generate_hosts_list.cpp
programs/mpi/mpi_and_exec/: CMakeLists.txt  mpi_and_exec.cpp
programs/mpi/mpi_print_proc_name/: CMakeLists.txt  print_proc_name.cpp
scripts/: experiments.py  launcher.py
todos/: multi-raxml-todo.txt
(+5094 files in other folders)
